refactor every mapper usage